# nikami-openmw-lab

./: .gitignore  CMakeLists.txt  README.md
apps/openmw/: CMakeLists.txt  androidmain.cpp  androidnative.cpp  engine.cpp  engine.hpp  fnvsidecaripc.cpp  fnvsidecaripc.hpp  main.cpp
apps/openmw/mwbase/: dialoguemanager.hpp  environment.hpp  journal.hpp  luamanager.hpp  mechanicsmanager.hpp  soundmanager.hpp  windowmanager.hpp  world.hpp
apps/openmw/mwclass/: activator.cpp  actor.cpp  actor.hpp  apparatus.cpp  armor.cpp  book.cpp  classes.cpp  clothing.cpp  container.cpp  creature.cpp  door.cpp  door.hpp  esm4activator.cpp  esm4activator.hpp  esm4base.cpp  esm4base.hpp  esm4container.cpp  esm4container.hpp  esm4creature.cpp  esm4creature.hpp  esm4npc.cpp  esm4npc.hpp  esm4talkingactivator.cpp  esm4talkingactivator.hpp  esm4terminal.cpp  esm4terminal.hpp  fnvactorstate.hpp  fnvaipackage.hpp  fnvfurniturelifecycle.hpp  fnvsandbox.cpp  fnvsandbox.hpp  ingredient.cpp  light.cpp  light4.cpp  light4.hpp  lockpick.cpp  misc.cpp  npc.cpp  potion.cpp  probe.cpp  (+2 more)
apps/openmw/mwdialogue/: dialoguemanagerimp.cpp  dialoguemanagerimp.hpp  esm4dialogueutils.cpp  esm4dialogueutils.hpp  esm4resultscript.cpp  esm4resultscript.hpp  journalimp.cpp  journalimp.hpp
apps/openmw/mwgui/: alchemywindow.cpp  assetstudiowindow.cpp  assetstudiowindow.hpp  birth.cpp  bookpage.cpp  class.cpp  companionwindow.cpp  confirmationdialog.cpp  confirmationdialog.hpp  console.cpp  container.cpp  dialogue.cpp  enchantingdialog.cpp  falloutquestlistpolicy.hpp  fnvmapmarker.hpp  hud.cpp  hud.hpp  inventoryitemmodel.cpp  inventoryitemtype.hpp  inventorylistpolicy.hpp  inventorytabsoverlay.cpp  inventorytabsoverlay.hpp  inventorywindow.cpp  inventorywindow.hpp  itemchargeview.cpp  itemview.cpp  itemview.hpp  itemwidget.cpp  itemwidget.hpp  layout.cpp  levelupdialog.cpp  loadingscreen.cpp  loadingscreen.hpp  mainmenu.cpp  mainmenu.hpp  mapwindow.cpp  mapwindow.hpp  messagebox.cpp  postprocessorhud.cpp  quickkeysmenu.cpp  (+24 more)
apps/openmw/mwinput/: actionmanager.cpp  actionmanager.hpp  actions.hpp  bindingsmanager.cpp  controllermanager.cpp  inputmanagerimp.hpp  keyboardmanager.cpp  mousemanager.cpp
apps/openmw/mwlua/: animationbindings.cpp  cellbindings.cpp  corebindings.cpp  engineevents.cpp  engineevents.hpp  idcollectionbindings.hpp  inputbindings.cpp  localscripts.cpp  localscripts.hpp  luabindings.cpp  luamanagerimp.cpp  luamanagerimp.hpp  obscriptbindings.cpp  obscriptbindings.hpp  obscriptcompiler.cpp  obscriptcompiler.hpp  triggervolume.cpp  triggervolume.hpp  uibindings.cpp  vrbindings.cpp
apps/openmw/mwmechanics/: actor.hpp  actors.cpp  actors.hpp  aibreathe.cpp  aicombat.cpp  aicombataction.cpp  aicombataction.hpp  aisequence.cpp  aisequence.hpp  aitravel.cpp  aiwander.cpp  aiwander.hpp  character.cpp  character.hpp  creaturestats.cpp  creaturestats.hpp  dialoguefacing.hpp  falloutcombat.cpp  falloutcombat.hpp  falloutweaponsound.hpp  mechanicsmanagerimp.cpp  mechanicsmanagerimp.hpp  npcstats.cpp  npcstats.hpp  ownership.cpp  ownership.hpp  spelllist.cpp  spells.cpp  spells.hpp  weapontype.cpp  weapontype.hpp
apps/openmw/mwphysics/: actor.cpp  actor.hpp  movementsolver.cpp  object.cpp  object.hpp  physicssystem.cpp  physicssystem.hpp  projectile.hpp  raycasting.hpp
apps/openmw/mwrender/: actoranimation.cpp  animation.cpp  animation.hpp  assetcapture.cpp  assetcapture.hpp  blendmask.hpp  bonegroup.hpp  camera.cpp  camera.hpp  characterpreview.cpp  characterpreview.hpp  creatureanimation.cpp  creatureanimation.hpp  effectmanager.cpp  effectmanager.hpp  esm4npcanimation.cpp  esm4npcanimation.hpp  falloutanimationtargets.hpp  fallouthitreaction.hpp  falloutlodselection.cpp  falloutlodselection.hpp  falloutweaponanimation.hpp  fogmanager.cpp  fogmanager.hpp  fonvpackageanimation.hpp  localmap.cpp  npcanimation.cpp  npcanimation.hpp  objectpaging.cpp  objectpaging.hpp  objects.cpp  objects.hpp  pingpongcanvas.cpp  pingpongcanvas.hpp  playervisualpolicy.hpp  postprocessor.cpp  postprocessor.hpp  renderingmanager.cpp  renderingmanager.hpp  ripples.cpp  (+11 more)
apps/openmw/mwscript/: compilercontext.cpp  containerextensions.cpp  dialogueextensions.cpp  globalscripts.cpp  interpretercontext.cpp  ref.cpp  statsextensions.cpp
apps/openmw/mwsound/: falloutsoundpath.cpp  falloutsoundpath.hpp  regionsoundselector.cpp  regionsoundselector.hpp  saysequence.hpp  soundbuffer.cpp  soundmanagerimp.cpp  soundmanagerimp.hpp
apps/openmw/mwstate/: statemanagerimp.cpp  statemanagerimp.hpp
apps/openmw/mwvr/: fnvxrliveframesurface.cpp  fnvxrliveframesurface.hpp  openxrinput.cpp  realisticcombat.cpp  vranimation.cpp  vranimation.hpp  vrgui.cpp  vrgui.hpp  vrinputmanager.cpp  vrinputmanager.hpp  vrpointer.cpp  vrpointer.hpp  vrtracking.hpp  vrutil.cpp  vrutil.hpp
apps/openmw/mwworld/: action.cpp  actionesm4radio.cpp  actionesm4radio.hpp  actionesm4terminal.cpp  actionesm4terminal.hpp  actionfnvcrafting.cpp  actionfnvcrafting.hpp  actionteleport.cpp  actorfacing.hpp  cell.cpp  cell.hpp  cellpreloader.cpp  cellpreloader.hpp  cellref.cpp  cellref.hpp  cellstore.cpp  cellstore.hpp  cellvisitors.hpp  containerstore.cpp  containerstore.hpp  datetimemanager.cpp  esm4questruntime.cpp  esm4questruntime.hpp  esmstore.cpp  esmstore.hpp  fnvcraftingruntime.cpp  fnvcraftingruntime.hpp  fnvfasttravel.cpp  fnvfasttravel.hpp  fnvlockpickruntime.cpp  fnvlockpickruntime.hpp  fnvmovement.hpp  fnvplayerruntimestate.cpp  fnvplayerruntimestate.hpp  fnvplayerstate.cpp  fnvplayerstate.hpp  fnvradioprogram.cpp  fnvradioprogram.hpp  fnvsavepreflight.cpp  fnvsavepreflight.hpp  (+23 more)
apps/openmw_tests/: CMakeLists.txt
apps/openmw_tests/mwclass/: testesm4container.cpp  testesm4talkingactivator.cpp  testfnvaipackage.cpp  testfnvfurniturelifecycle.cpp  testfnvsandbox.cpp  testlight4.cpp
apps/openmw_tests/mwdialogue/: testesm4dialogueutils.cpp  testesm4resultscript.cpp
apps/openmw_tests/mwgui/: testfalloutquestlistpolicy.cpp  testinventoryitemtype.cpp  testinventorylistpolicy.cpp
apps/openmw_tests/mwmechanics/: testdialoguefacing.cpp  testfalloutcombat.cpp  (+2 more)
(+586 files in other folders)
